# ironclaw

./: .codespellrc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSING.md  Makefile  README.md  REVIEWER_GATE_VERIFY.md  ROADMAP.md  SECURITY.md  action.yml  docker-compose.demo.yml  docker-compose.yml  glama.json  go.mod  go.sum  mkdocs.yml  server.json  teaser.html
.agents/: PLAN.md  ROADMAP-TO-1.0.md  gap-analysis.md  repo-map.md  task-graph.md  task-registry.json
.devcontainer/: README.md  devcontainer.json  post-create.sh  welcome.sh
.github/: .reviewer-gate-verify.md  CODEOWNERS  DISCUSSIONS.md  dependabot.yml  pull_request_template.md  reviewer-app-manifest.yml
.ironclaw/: sandbox-isolation.json  sandbox-posture.yml
.ironclaw-demo-state/: .gitignore
Formula/: ironclaw.rb
api/: control-plane.md  openapi.yaml
community/: README.md  adoption-metrics.md  amplification-submissions-queue.md  containment-proof-pack.md  directory-listings.md  integration-framework-community-posts.md  integration-guides-launch-posts.md  launch-engagement-playbook.md  security-proof-writeup.md  (+2 more)
examples/integrations/llamaindex/llama-index-tools-ironclaw/: LICENSE  README.md  pyproject.toml
examples/integrations/llamaindex/llama-index-tools-ironclaw/llama_index/tools/ironclaw/: __init__.py  _sandbox.py  base.py
examples/integrations/llamaindex/llama-index-tools-ironclaw/tests/: test_tools_ironclaw.py
(+1209 files in other folders)
